// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Power Apps maintenance presentation > snapshots ready, skipped, advisory, malformed, and offline states > doctor JSON states 1`] = `
{
  "layers": [
    {
      "checks": [
        {
          "id": undefined,
          "label": "version",
          "severity": "ok",
          "state": undefined,
        },
      ],
      "title": "CLI",
    },
    {
      "checks": [
        {
          "id": "node",
          "label": "node",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "openspec",
          "label": "openspec",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "github-copilot",
          "label": "github-copilot",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "github-copilot:github-copilot-authentication",
          "label": "GitHub Copilot authentication",
          "severity": "warn",
          "state": "not-observable",
        },
        {
          "id": "claude",
          "label": "claude",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "claude:claude-code-doctor",
          "label": "Claude Code doctor",
          "severity": "ok",
          "state": "ready",
        },
      ],
      "title": "Environment",
    },
    {
      "checks": [
        {
          "id": undefined,
          "label": "manifest",
          "severity": "ok",
          "state": undefined,
        },
        {
          "id": undefined,
          "label": "version",
          "severity": "ok",
          "state": undefined,
        },
        {
          "id": "repository-governance",
          "label": "repository governance",
          "severity": "ok",
          "state": "handoff-generated",
        },
        {
          "id": "governance-seed-incomplete",
          "label": "governance seed",
          "severity": "warn",
          "state": "seed-incomplete",
        },
        {
          "id": "framework-contract",
          "label": "framework contract",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "selected-agents",
          "label": "selected agents",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "framework-markers",
          "label": "framework markers",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "power-apps-starter",
          "label": "Power Apps starter",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": "power-apps-project",
          "label": "Power Apps project",
          "severity": "ok",
          "state": "ready",
        },
        {
          "id": undefined,
          "label": "managed core",
          "severity": "ok",
          "state": undefined,
        },
      ],
      "title": "Project",
    },
    {
      "checks": [
        {
          "id": "power-apps-cli",
          "label": "Power Apps CLI",
          "severity": "skipped",
          "state": "not-observable",
        },
      ],
      "title": "Runtime",
    },
    {
      "checks": [
        {
          "id": "code-apps-plugin:github-copilot",
          "label": "GitHub Copilot",
          "severity": "warn",
          "state": "missing",
        },
        {
          "id": "code-apps-plugin:claude",
          "label": "Claude Code",
          "severity": "warn",
          "state": "missing",
        },
      ],
      "title": "Optional Code Apps plugin",
    },
  ],
  "summary": {
    "failures": 0,
    "warnings": 4,
  },
}
`;

exports[`Power Apps maintenance presentation > snapshots ready, skipped, advisory, malformed, and offline states > doctor human states 1`] = `
[
  "[ok] Power Apps starter: https://github.com/microsoft/PowerAppsCodeApps/templates/starter @ 3438c352483e40982f6c5c0fc36fd71f8e7adbbb",
  "[ok] Power Apps project: SDK, Vite plugin, and deterministic lockfile metadata are valid",
  "Runtime",
  "[....] Power Apps CLI: project dependencies are not installed - run npm ci, then rerun liftoff doctor",
  "Optional Code Apps plugin",
  "[warn] GitHub Copilot: code-apps-preview@power-platform-skills is not listed by GitHub Copilot. - Open GitHub Copilot and add the marketplace with \`/plugin marketplace add microsoft/power-platform-skills\`, then install \`/plugin install code-apps-preview@power-platform-skills\`. Do not run \`/create-code-app\` in this project; use the connector and deployment skills after Liftoff creates the application.",
  "[warn] Claude Code: code-apps-preview@power-platform-skills is not listed by Claude Code. - Open Claude Code and add the marketplace with \`/plugin marketplace add microsoft/power-platform-skills\`, then install \`/plugin install code-apps-preview@power-platform-skills\`. Do not run \`/create-code-app\` in this project; use the connector and deployment skills after Liftoff creates the application.",
  "[warn] Doctor summary: 0 failure(s), 4 warning(s)",
]
`;

exports[`Power Apps maintenance presentation > snapshots ready, skipped, advisory, malformed, and offline states > validate project-owned edit states 1`] = `
{
  "human": {
    "code": 0,
    "stderr": [],
    "stdout": [
      "LIFTOFF / VALIDATE - Validate a generated Liftoff project",
    ],
  },
  "json": {
    "code": 0,
    "issues": [],
    "valid": true,
  },
}
`;

exports[`Power Apps maintenance presentation > snapshots ready, skipped, advisory, malformed, and offline states > validate ready JSON 1`] = `
{
  "code": 0,
  "issues": [],
  "valid": true,
}
`;
